Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/monokai.min.css">
+          href="https://almensu.github.io/blog/theme/pygments/monokai.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/solid.css">
 
 
 
@@ -34,7 +34,6 @@
   <!-- Microsoft EDGE -->
   <meta name="msapplication-TileColor" content="#333">
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="yanghoo205 Atom">
 
 
 
@@ -52,7 +51,7 @@
   <meta property="og:title" content="yanghoo205"/>
   <meta property="og:description" content="分享技术与生活"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content=""/>
+  <meta property="og:url" content="https://almensu.github.io/blog"/>
 
   <title>yanghoo205 &ndash; Archives</title>
 
@@ -62,12 +61,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="YANGHOO205" title="YANGHOO205">
+    <a href="https://almensu.github.io/blog/">
+      <img src="https://almensu.github.io/blog/theme/img/profile.png" alt="YANGHOO205" title="YANGHOO205">
     </a>
 
     <h1>
-      <a href="/">YANGHOO205</a>
+      <a href="https://almensu.github.io/blog/">YANGHOO205</a>
     </h1>
 
     <p>个人博客</p>
@@ -89,13 +88,12 @@
   <main>
 
 <nav>
-  <a href="/">Home</a>
+  <a href="https://almensu.github.io/blog/">Home</a>
 
   <a href="/archives.html">Archives</a>
   <a href="/categories.html">Categories</a>
   <a href="/tags.html">Tags</a>
 
-  <a href="/feeds/all.atom.xml">Atom</a>
 
 </nav>
 
@@ -109,7 +107,7 @@
           <dt>四 21 三月 2024</dt>
 
         <dd>
-          <a href="/ni-hao.html">你好</a>
+          <a href="https://almensu.github.io/blog/ni-hao.html">你好</a>
         </dd>
     </dl>
   </div>
@@ -126,7 +124,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " yanghoo205 ",
-  "url" : "",
+  "url" : "https://almensu.github.io/blog",
   "image": "",
   "description": "分享技术与生活"
 }
