--- a/ni-hao.html
+++ b/ni-hao.html
@@ -10,17 +10,17 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/monokai.min.css">
+          href="https://almensu.github.io/blog/theme/pygments/monokai.min.css">
 
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://almensu.github.io/blog/theme/font-awesome/css/solid.css">
 
 
 
@@ -34,7 +34,6 @@
   <!-- Microsoft EDGE -->
   <meta name="msapplication-TileColor" content="#333">
 
-  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="yanghoo205 Atom">
 
 
 
@@ -54,11 +53,11 @@
   <meta property="og:title" content="你好"/>
   <meta property="og:description" content="你好! 这是我的第一篇博客文章。我将在这里分享我的想法和经历。 关于这个博客 这个博客使用 Pelican 搭建,托管在 GitHub Pages 上。我选 …"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="/ni-hao.html"/>
+  <meta property="og:url" content="https://almensu.github.io/blog/ni-hao.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-03-21 00:00:00+08:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="/author/yes.html">
+  <meta property="article:author" content="https://almensu.github.io/blog/author/yes.html">
   <meta property="article:section" content="Life"/>
   <meta property="article:tag" content="hello"/>
   <meta property="article:tag" content="first"/>
@@ -72,12 +71,12 @@
 
 <aside>
   <div>
-    <a href="/">
-      <img src="/theme/img/profile.png" alt="YANGHOO205" title="YANGHOO205">
+    <a href="https://almensu.github.io/blog/">
+      <img src="https://almensu.github.io/blog/theme/img/profile.png" alt="YANGHOO205" title="YANGHOO205">
     </a>
 
     <h1>
-      <a href="/">YANGHOO205</a>
+      <a href="https://almensu.github.io/blog/">YANGHOO205</a>
     </h1>
 
     <p>个人博客</p>
@@ -99,13 +98,12 @@
   <main>
 
 <nav>
-  <a href="/">Home</a>
+  <a href="https://almensu.github.io/blog/">Home</a>
 
   <a href="/archives.html">Archives</a>
   <a href="/categories.html">Categories</a>
   <a href="/tags.html">Tags</a>
 
-  <a href="/feeds/all.atom.xml">Atom</a>
 
 </nav>
 
@@ -114,7 +112,7 @@
       
     <h1 id="ni-hao">你好</h1>
     <p>
-      Posted on 四 21 三月 2024 in <a href="/category/life.html">Life</a>
+      Posted on 四 21 三月 2024 in <a href="https://almensu.github.io/blog/category/life.html">Life</a>
 
     </p>
   </header>
@@ -135,8 +133,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/hello.html">hello</a>
-      <a href="/tag/first.html">first</a>
+      <a href="https://almensu.github.io/blog/tag/hello.html">hello</a>
+      <a href="https://almensu.github.io/blog/tag/first.html">first</a>
     </p>
   </div>
 
@@ -158,7 +156,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " yanghoo205 ",
-  "url" : "",
+  "url" : "https://almensu.github.io/blog",
   "image": "",
   "description": "分享技术与生活"
 }
