Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -104,6 +104,9 @@
   <div>
     <ul class="list">
       <li>
+        <a href="https://almensu.github.io/blog/category/fen-lei.html">分类</a> (1)
+      </li>
+      <li>
         <a href="https://almensu.github.io/blog/category/life.html">Life</a> (1)
       </li>
     </ul>
