--- a/tags.html
+++ b/tags.html
@@ -102,7 +102,9 @@
     <h1 id="tags">Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://almensu.github.io/blog/tag/first.html">first</a> (1)</li>
+    <ul class="list">          <li><a href="https://almensu.github.io/blog/tag/biao-qian-1.html">标签1</a> (1)</li>
+          <li><a href="https://almensu.github.io/blog/tag/biao-qian-2.html">标签2</a> (1)</li>
+          <li><a href="https://almensu.github.io/blog/tag/first.html">first</a> (1)</li>
           <li><a href="https://almensu.github.io/blog/tag/hello.html">hello</a> (1)</li>
     </ul>
   </div>
